fix gap between schematics

--- a/static/css/Mindustry.css
+++ b/static/css/Mindustry.css
@@ -110,6 +110,7 @@ button:focus {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  gap: 1.5em;
 }
 
 .schematic {
